--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: auto;
+  font-size: calc(10px + 1.5vmin);
   color: white;
+  border: 1px solid white;
+  justify-content: center;
+}
+
+#l {
+  margin-left: 10px;
+}
+.mainpart {
+  display: flex;
+  flex-direction: row;
+  margin-left: 200px;
+}
+
+#cal {
+  margin-bottom: 50px;
+}
+
+* {
+  background-color: #282c34;
+}
+
+#cont {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  margin-top: 30px;
+}
+
+Form {
+  padding-left: 200px;
+  padding-top: 20px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mb-3 {
+  font-size: large;
+  width: 300px;
+  text-align: left;
+}
+
+h1 {
+  padding-top: 50px;
+  color: #61dafb;
+  display: flex;
+  justify-content: center;
+}
+
+.label {
+  margin-top: 40px;
 }
